cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/APHA_TestPartResult__c.object-meta.xml
<CustomObject>
    <label>Test Part Result</label>
    <nameField>
        <displayFormat>TPR-{00000000}</displayFormat>
        <label>Test Part Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Part Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>