cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_BatchBovine__c.field-meta.xml
<CustomField>
    <fullName>APHA_BatchBovine__c</fullName>
    <label>Batch - Bovine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>