cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_BatchDIVA__c.field-meta.xml
<CustomField>
    <fullName>APHA_BatchDIVA__c</fullName>
    <label>Batch - DIVA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>