cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_EarTagNo__c.field-meta.xml
<CustomField>
    <fullName>APHA_EarTagNo__c</fullName>
    <description>Unique Ear Tag number for Cattle</description>
    <label>Ear Tag No</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>