cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_ResultAfterReview__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResultAfterReview__c</fullName>
    <label>Result - After Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reaction</fullName>
            </value>
            <value>
                <fullName>Inconclusive Reaction</fullName>
            </value>
            <value>
                <fullName>No Reaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>