cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_ResultCalculated__c.field-meta.xml
<CustomField>
    <fullName>APHA_ResultCalculated__c</fullName>
    <description>Result of test for individual animal</description>
    <formula>IF(  
    TEXT(APHA_TestType__c) == &apos;SICCT&apos;,
    IF ( (APHA_TestDay2Bovine__c -  APHA_TestDay1Bovine__c) &gt; (APHA_TestDay2Avian__c - APHA_TestDay1Avian__c),
    &quot;Reaction&quot;,
    IF( (APHA_TestDay2Bovine__c-APHA_TestDay1Bovine__c)==(APHA_TestDay2Avian__c-APHA_TestDay1Avian__c),&quot;Inconclusive Reaction&quot;,&quot;No Reaction&quot;) 
    ), 
    IF( 
        TEXT(APHA_TestType__c) == &apos;DIVA&apos;,
        IF( APHA_TestDay2DIVA__c &gt;(2*APHA_TestDay1DIVA__c), &quot;Reaction&quot;,  IF( APHA_TestDay2DIVA__c &gt;(1.5*APHA_TestDay1DIVA__c) , &quot;Inconclusive Reaction&quot;,&quot;No Reaction&quot; )  ) , &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result - Calculated</label>
    <type>Text</type>
</CustomField>