cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_TestDay1Avian__c.field-meta.xml
<CustomField>
    <fullName>APHA_TestDay1Avian__c</fullName>
    <description>Test Day 1 Avian - Skin fold measurement in mm</description>
    <label>Test Day 1 Avian</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>