cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_TestDay2DIVA__c.field-meta.xml
<CustomField>
    <fullName>APHA_TestDay2DIVA__c</fullName>
    <description>Test Day 2 DIVA - Skin fold measurement in mm</description>
    <label>Test Day 2 DIVA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>