cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_TestPart__c.field-meta.xml
<CustomField>
    <fullName>APHA_TestPart__c</fullName>
    <description>Parent test part reference</description>
    <label>Test Part</label>
    <referenceTo>APHA_TestPart__c</referenceTo>
    <relationshipLabel>Test Part Results</relationshipLabel>
    <relationshipName>APHA_TestPartResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>