cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/APHA_TestType__c.field-meta.xml
<CustomField>
    <fullName>APHA_TestType__c</fullName>
    <description>Type of test</description>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIVA</fullName>
            </value>
            <value>
                <fullName>SICCT</fullName>
            </value>
            <value>
                <fullName>Not Tested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>