cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Test Part Results</relationshipLabel>
    <relationshipName>APHA_TestPartResults</relationshipName>
    <type>Lookup</type>
</CustomField>