cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/fields/Not_Tested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Tested_Reason__c</fullName>
    <description>Reason why a cattle was not tested</description>
    <inlineHelpText>Required for test type &quot;Not tested&quot;</inlineHelpText>
    <label>Not Tested Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cattle too young</fullName>
            </value>
            <value>
                <fullName>Cattle deceased</fullName>
            </value>
            <value>
                <fullName>Other reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>