cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/validationRules/APHA_TestDay2MeasurementRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>APHA_TestDay2MeasurementRequired</fullName>
    <active>true</active>
    <description>Either (Test Day 2 Bovine AND Test Day 2Avian) Or Test Day 2 DIVA is required</description>
    <errorConditionFormula>OR(
    AND(
        OR(NOT(ISBLANK(APHA_TestDay2Avian__c)), NOT(ISBLANK(APHA_TestDay2Bovine__c))),
        NOT(ISBLANK(APHA_TestDay2DIVA__c))
    ),
    AND(
        ISBLANK(APHA_TestDay2DIVA__c),
        OR(
            AND(NOT(ISBLANK(APHA_TestDay2Avian__c)), ISBLANK(APHA_TestDay2Bovine__c)),
            AND(ISBLANK(APHA_TestDay2Avian__c), NOT(ISBLANK(APHA_TestDay2Bovine__c)))
        )
    )
)</errorConditionFormula>
    <errorMessage>Either (Test Day 2 Bovine AND Test Day 2 Avian) Or Test Day 2 DIVA is required</errorMessage>
</ValidationRule>