cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/validationRules/Not_tested_must_supply_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_tested_must_supply_reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(APHA_TestType__c, &quot;Not tested&quot;)  &amp;&amp; ISBLANK( TEXT(Not_Tested_Reason__c ))</errorConditionFormula>
    <errorMessage>Must supply &quot;Not tested reason&quot; when the test type is &quot;Not tested&quot;</errorMessage>
</ValidationRule>