cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/validationRules/Same_reagents_on_day_1_and_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_reagents_on_day_1_and_2</fullName>
    <active>true</active>
    <description>Measurement types need to match at TD1 and TD2.</description>
    <errorConditionFormula>ISNULL(APHA_TestDay1Avian__c)  &lt;&gt;  ISNULL(APHA_TestDay2Avian__c)  || ISNULL( APHA_TestDay1Bovine__c ) &lt;&gt; ISNULL( APHA_TestDay2Bovine__c ) || ISNULL( APHA_TestDay1DIVA__c ) &lt;&gt; ISNULL( APHA_TestDay2DIVA__c )</errorConditionFormula>
    <errorMessage>The same measurement types are needed for both test days.</errorMessage>
</ValidationRule>