cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPartResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APHA_TestType__c</columns>
    <columns>APHA_EarTagNo__c</columns>
    <columns>APHA_ResultAfterReview__c</columns>
    <columns>APHA_ResultCalculated__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>